# mlops_equipo1

./: Calculadora.py  MANIFEST.in  README.md  __init__.py  from pathlib import Path.py  pyproject.toml  setup.py
.github/workflows/: main.yml
Funciones/: Potencia.py  RaizCuadrada.py  __init__.py
funciones/: potencia.py
mlops_equipo1.egg-info/: PKG-INFO  SOURCES.txt
tests/Integration/: calculadora_prueba.py  test_integracion.py
tests/Unit/: test_unit.py
