[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_equipo1"
version = "0.1.0"
description = "Proyecto MLOps Equipo 1 - Calculadora con funciones matemáticas"
authors = [
    {name = "Equipo 1", email = "equipo1@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mlops_equipo1*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
